--- a/readme
+++ b/readme
@@ -4,3 +4,4 @@
 ④Half_wave_rectification：Switch利用阈值输出功能完成半波整流和方波的产生。
 ⑤relative_logical_operation.slx ：相对运算（比较数值或对NAN INF进行判断），逻辑运算（包括逻辑或、与、非）
 ⑥intergal_model： 积分的另外的形式（带初值端口输入、限幅）
+⑦discrete_model :离散延时器及Z传递函数的一个系统演示
